--- a/views/login.hbs
+++ b/views/login.hbs
@@ -7,7 +7,7 @@
     <form action="/login" method="POST">
         <div class="form-group">
             <label for="username">Email</label>
-            <input type="email" id="username" class="form-control" name="username" placeholder="Your email address">
+            <input type="email" id="username" class="form-control" name="username" value="{{user.username}}" placeholder="Your email address">
         </div>
 
         <div class="form-group">
