--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,7 +1,7 @@
 <title>{{titel}}</title>
 
 <div class="container well">
-    <div class="col-xs-10 offset-xs-1">
+    <div class="col-xs-12">
     <div class="row"></div>
     <h2>Please login:</h2>
     <form action="/login" method="POST">
