--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,9 +1,9 @@
 <title>{{titel}}</title>
 
-<div class="container well">
-    <div class="col-xs-10 offset-xs-1">
+<div class="container-fluid well">
+    <div class="col-md-10 col-md-offset-1">
     <div class="row"></div>
-    <h2>Please login:</h2>
+    <h2>Please register:</h2>
     <form action="/register" method="POST">
 
         <div class="form-group">
