flash messages roughed in.

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -15,7 +15,7 @@
             <div class="alert alert-info" role="alert">{{this}}</div>
         {{/each}} {{#each warning}}
             <div class="alert alert-warning" role="alert">{{this}}</div>
-        {{/each}} {{#each danger}}
+        {{/each}} {{#each error}}
             <div class="alert alert-danger" role="alert">{{this}}</div>
         {{/each}}
     </div>
