--- a/views/login.hbs
+++ b/views/login.hbs
@@ -2,23 +2,25 @@
 
 <div class="container well">
     <div class="col-xs-12">
-    <div class="row"></div>
-    <h2>Please login:</h2>
-    <form action="/login" method="POST">
-        <div class="form-group">
-            <label for="username">Email</label>
-            <input type="email" id="username" class="form-control" name="username" value="{{user.username}}" placeholder="Your email address">
-        </div>
+        <div class="row"></div>
+        <div class="col-sm-12">
+            <h2>Please login:</h2>
+            <form action="/login" method="POST">
+                <div class="form-group">
+                    <label for="username">Email</label>
+                    <input type="email" id="username" class="form-control" name="username" value="{{user.username}}" placeholder="Your email address">
+                </div>
 
-        <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" id="password" class="form-control" name="password" placeholder="password">
-        </div>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" id="password" class="form-control" name="password" placeholder="password">
+                </div>
 
-        <div>
-            <input type="submit">
+                <div>
+                    <input type="submit">
+                </div>
+            </form>
         </div>
-    </form>
     </div>
-    </div>
+</div>
 </div>
