Minor cleanup. Clearing flash messages on logout.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,10 +1,11 @@
 <h1>{{title}}</h1>
 
 <p>Welcome to {{title}}</p>
+
+<pre>
 <code>
 
-<p>Hello {{user}}!</>
-
-<p>{{warning}}</p>
+    <p>Hello {{user}}!</>
 
 </code>
+</pre>
