Updated password email.

--- a/emails/pwresetemail.hbs
+++ b/emails/pwresetemail.hbs
@@ -9,7 +9,7 @@
 <body>
     <h1>Reset password</h1>
     <h2>{{user.firstname}} {{user.lastname}}</h2>
-    <h3>You've requested a password reset, please click on the link below to reset your password.</h3>
+    <h3>You've requested a password reset, please click on "The link below" to reset your password.</h3>
 
     <p><a href="{{url}}/newpassword/{{user.id}}/{{user.pw_reset_key}}">The link below</a></p>
 </body>
