--- a/emails/confirmemail.hbs
+++ b/emails/confirmemail.hbs
@@ -12,5 +12,6 @@
     <h3>Before using your account, please confirm your email address by clicking "The link below".</h3>
 
     <p><a href="{{url}}/confirmemail/{{user.id}}">The link below</a></p>
+    <p style="margin-top: 40px">Please do not reply to this email</p>
 </body>
 </html>
