--- a/emails/pwresetemail.hbs
+++ b/emails/pwresetemail.hbs
@@ -12,5 +12,6 @@
     <h3>You've requested a password reset, please click on "The link below" to reset your password.</h3>
 
     <p><a href="{{url}}/newpassword/{{user.id}}/{{user.pw_reset_key}}">The link below</a></p>
+    <p style="margin-top: 40px">Please do not reply to this email</p>
 </body>
 </html>
